@@ -16,6 +16,8 @@ Release 0.19.1 - Unreleased
                (Toby White via Andrew Purtell)
    HBASE-1180  Add missing import statements to SampleUploader and remove
                unnecessary @Overrides (Ryan Smith via Andrew Purtell)
+   HBASE-1187  After disabling/enabling a table, the regions seems to 
+               be assigned to only 1-2 region servers
 
 Release 0.19.0
   INCOMPATIBLE CHANGES
